--- a/NooriApi/appsettings.json
+++ b/NooriApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=wapicaz-spdb.database.windows.net;Database=WapXConnectStaging;Username=apps;Password=P@ssword1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
