finishing user endpoint

--- a/NooriApi/appsettings.json
+++ b/NooriApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=wapicaz-spdb.database.windows.net;Database=WapXConnectStaging;Username=apps;Password=P@ssword1"
+    "DefaultConnection": "Data Source=wapicaz-spdb.database.windows.net;Initial Catalog=WapXConnectStaging;User=apps;Password=P@ssword1"
   },
   "Logging": {
     "LogLevel": {
