--- a/NooriInfrastructure/NooriInfrastructure.csproj
+++ b/NooriInfrastructure/NooriInfrastructure.csproj
@@ -15,4 +15,10 @@
     <ProjectReference Include="..\NooriApplication\NooriApplication.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
